# srv

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml  release.yml
src/: filetype.rs  main.rs
templates/: github-markdown.css.html  index.html  index.html.tera  index.html.tera.embed
