[package]
authors = ["Tim_Paik <timpaikc@outlook.com>"]
description = "simple http server written in rust"
edition = "2018"
name = "srv"
version = "1.1.0"

[dependencies]
actix-files = "0.6"
actix-web = { version = "4.1", features = ["rustls"] }
actix-web-httpauth = "0.8"
askama = "0.11"
askama_actix = "0.13"
clap = { version = "4.0", features = ["derive", "wrap_help", "color", "cargo"] }
comrak = { version = "0.14.0", default-features = false }
env_logger = "0.9"
log = "0.4"
mime_guess = "2.0"
rustls = "0.20"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.5"
urlencoding = "2.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
